docs: :memo: Agregar enunciado y diagramas para la bd

--- a/restaurante-api/restaurante-api/appsettings.json
+++ b/restaurante-api/restaurante-api/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "mongodb+srv://restaurante:QA9e4WZOon41zNQM@devcluster.y2cu3zh.mongodb.net/?retryWrites=true&w=majority&appName=DevCluster",
+    "DatabaseName": "DevCluster",
+    "CollectionName": "Restaurante"
+  }
 }
