Actualizar appsettings.json

--- a/restaurante-api/restaurante-api/appsettings.json
+++ b/restaurante-api/restaurante-api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "mongodb+srv://restaurante:QA9e4WZOon41zNQM@devcluster.y2cu3zh.mongodb.net/?retryWrites=true&w=majority&appName=DevCluster",
+    "DefaultConnection": "mongodb+srv://user:secret@devcluster.y2cu3zh.mongodb.net/?retryWrites=true&w=majority&appName=DevCluster",
     "DatabaseName": "DevCluster",
     "CollectionName": "Restaurante"
   }
